Bug 433889 - Title Clip Editor Background slider in an incorrect position
Summary: Title Clip Editor Background slider in an incorrect position
Status: RESOLVED FIXED
Alias: None
Product: kdenlive
Classification: Applications
Component: User Interface & Miscellaneous (other bugs)
Version First Reported In: 20.12.0
Platform: Microsoft Windows Microsoft Windows
: NOR minor
Target Milestone: ---
Assignee: Julius Künzel
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-03-03 05:10 UTC by Phuoc
Modified: 2021-03-28 10:50 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Phuoc 2021-03-03 05:10:35 UTC
SUMMARY
Sometimes the background opacity slider in the title editor is in the wrong position.

STEPS TO REPRODUCE
1. Create title clipA with background opacity 0 (move the slider on the background tab to the left).
2. Create title clipB with background opacity 255.
3. Open the clipA

OBSERVED RESULT
The slider is at right=255, but the value is 0.

EXPECTED RESULT
Slider at left= 0

SOFTWARE/OS VERSIONS
Windows: 10
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Julius Künzel 2021-03-25 22:12:04 UTC
Thanks for your report! I can confirm this. Working on a fix…
Comment 2 Julius Künzel 2021-03-28 10:50:27 UTC
Git commit 24532f22171222cdffb2058011664fd6c4ef34b6 by Julius Künzel.
Committed on 28/03/2021 at 10:49.
Pushed by jlskuz into branch 'release/21.04'.

Titler: update background alpha slider properly

M  +1    -0    src/titler/titlewidget.cpp

https://invent.kde.org/multimedia/kdenlive/commit/24532f22171222cdffb2058011664fd6c4ef34b6