Titler: update background alpha slider properly

BUG: 433889